--- a/app_skill/src/main/AndroidManifest.xml
+++ b/app_skill/src/main/AndroidManifest.xml
@@ -3,20 +3,24 @@
     package="com.fkq.skill">
 
     <application
+        android:name=".util.AppManager"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name="com.fkq.skill.MainActivity"
-            android:label="@string/app_name">
+
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MainActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
