--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:3.5.2'  //图片加载
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
