--- a/app_skill/build.gradle
+++ b/app_skill/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 26
@@ -14,6 +15,60 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    MobSDK {
+        appKey "25fa2e36c3f4e"
+        appSecret "9b12300dec1e617a24dd2d34b9befd9e"
+        //分享平台配置信息
+        ShareSDK {
+
+            devInfo {
+                //微信
+                Wechat {
+                    sortId 1
+                    appId "wx4868b35061f87885"
+                    appSecret "64020361b8ec4c99936c0e3999a9f249"
+                    shareByAppClient true
+                }
+                // 朋友圈
+                WechatMoments {
+                    sortId 2
+                    appId "wx4868b35061f87885"
+                    appSecret "64020361b8ec4c99936c0e3999a9f249"
+                    shareByAppClient true
+                }
+                // 微信收藏
+                WechatFavorite {
+                    sortId 3
+                    appId "wx4868b35061f87885"
+                    appSecret "64020361b8ec4c99936c0e3999a9f249"
+                    shareByAppClient true
+                }
+                // QQ
+                QQ {
+                    sortId 4
+                    appId "100371282"
+                    appKey "aed9b0303e3ed1e27bae87c33761161d"
+                    shareByAppClient true
+                }
+                // QQ空间
+                QZone {
+                    sortId 5
+                    appId "100371282"
+                    appKey "aed9b0303e3ed1e27bae87c33761161d"
+                    shareByAppClient true
+                }
+                // 新浪
+                SinaWeibo {
+                    sortId 6
+                    appKey "170221996"
+                    appSecret "75314930606f946864ee0d7aeecc46ed"
+                    callbackUri "http://www.sharesdk.cn"
+                    shareByAppClient true
+                }
+            }
         }
     }
 }
