--- a/app_skill/build.gradle
+++ b/app_skill/build.gradle
@@ -18,6 +18,13 @@ android {
         }
     }
 
+    //arcgis配置
+    packagingOptions {
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+    //shareSdk分享登录配置
     MobSDK {
         appKey "25fa2e36c3f4e"
         appSecret "9b12300dec1e617a24dd2d34b9befd9e"
@@ -79,6 +86,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.master.android:permissionhelper:2.0'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'//没有使用特殊Header，可以不加这行
     compile project(path: ':lib_common')
 }
