--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -26,12 +26,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
     compile 'com.github.bumptech.glide:glide:3.5.2'  //图片加载
+    compile 'com.gyf.barlibrary:barlibrary:2.3.0'//沉浸式
     compile 'com.androidkun:XTabLayout:1.1.3' //TabLayout
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
