--- a/app_skill/build.gradle
+++ b/app_skill/build.gradle
@@ -88,7 +88,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'//没有使用特殊Header，可以不加这行
-    compile project(path: ':lib_common')
+    implementation project(path: ':lib_common')
 }
