--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'  //图片加载
     compile 'com.androidkun:XTabLayout:1.1.3' //TabLayout
+    compile 'com.lzy.net:okgo:3.0.4'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-16'//没有使用特殊Header，可以不加这行
 }
