--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion  rootProject.ext.minSdkVersion
+        minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -33,7 +33,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'  //图片加载
     compile 'com.androidkun:XTabLayout:1.1.3' //TabLayout
-    compile 'com.lzy.net:okgo:3.0.4'
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-16'//没有使用特殊Header，可以不加这行
+    compile 'me.jessyan:autosize:1.1.0'//屏幕适配
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.jaeger.statusbarutil:library:1.5.1' //状态栏
+    compile 'com.lzy.net:okgo:3.0.4' //网络请求
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16' //上拉下刷
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-16'
 }
