--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compile 'com.androidkun:XTabLayout:1.1.3' //TabLayout
     compile 'me.jessyan:autosize:1.1.0'//屏幕适配
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.jaeger.statusbarutil:library:1.5.1' //状态栏
+    compile 'com.gyf.barlibrary:barlibrary:2.3.0'//沉浸式
+    compile 'me.imid.swipebacklayout.lib:library:1.1.0'//侧滑返回
     compile 'com.lzy.net:okgo:3.0.4' //网络请求
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-16' //上拉下刷
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-16'
