--- a/app_skill/src/main/AndroidManifest.xml
+++ b/app_skill/src/main/AndroidManifest.xml
@@ -56,18 +56,18 @@
         android:theme="@style/AppTheme"
         tools:replace="android:name">
 
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.LoginActivityCom">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.StickyActivity" />
-        <activity android:name=".activity.SmartRefreshActivity" />
-        <activity android:name=".arcgis.ArcgisActivity" />
-        <activity android:name=".arcgis.ArcgisListActivity" />
+        <activity android:name=".activity.MainActivityCom" />
+        <activity android:name=".activity.StickyActivityCom" />
+        <activity android:name=".activity.SmartRefreshActivityCom" />
+        <activity android:name=".arcgis.ArcgisActivityCom" />
+        <activity android:name=".arcgis.ArcgisListActivityCom" />
 
         <!-- 调用QQ，需要注册的回调activity -->
         <activity
