--- a/app_skill/build.gradle
+++ b/app_skill/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -12,6 +11,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                //  替换成你的qq_id
+                qq_id: "305502158"
+        ]
     }
     buildTypes {
         release {
@@ -26,67 +29,10 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
-    //shareSdk分享登录配置
-    MobSDK {
-        appKey "25fa2e36c3f4e"
-        appSecret "9b12300dec1e617a24dd2d34b9befd9e"
-        //分享平台配置信息
-        ShareSDK {
-
-            devInfo {
-                //微信
-                Wechat {
-                    sortId 1
-                    appId "wx4868b35061f87885"
-                    appSecret "64020361b8ec4c99936c0e3999a9f249"
-                    shareByAppClient true
-                    bypassApproval true
-                }
-                // 朋友圈
-                WechatMoments {
-                    sortId 2
-                    appId "wx4868b35061f87885"
-                    appSecret "64020361b8ec4c99936c0e3999a9f249"
-                    shareByAppClient true
-                    bypassApproval true
-                }
-                // 微信收藏
-                WechatFavorite {
-                    sortId 3
-                    appId "wx4868b35061f87885"
-                    appSecret "64020361b8ec4c99936c0e3999a9f249"
-                }
-                // QQ
-                QQ {
-                    sortId 4
-                    appId "1106930326"
-                    appKey "sV3wb6DpsUjNnru7"
-                    shareByAppClient true
-                    bypassApproval true
-                }
-                // QQ空间
-                QZone {
-                    sortId 5
-                    appId "1106930326"
-                    appKey "sV3wb6DpsUjNnru7"
-                    shareByAppClient true
-                    bypassApproval true
-                }
-                // 新浪
-                SinaWeibo {
-                    sortId 6
-                    appKey "711574484"
-                    appSecret "1d7c2eea060efcdc942c94daed608e01"
-                    callbackUri "http://www.sharesdk.cn"
-                    shareByAppClient true
-                    bypassApproval true
-                }
-            }
-        }
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'me.shaohui.shareutil:shareutil:1.3.8'
     implementation project(path: ':lib_common')
 }
