--- a/app_skill/src/main/AndroidManifest.xml
+++ b/app_skill/src/main/AndroidManifest.xml
@@ -27,16 +27,18 @@
             android:name="design_height_in_dp"
             android:value="640" />
 
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.StickyActivity" />
         <activity android:name=".activity.SmartRefreshActivity" />
+        <activity android:name=".activity.RecyclerActivity" />
+        <activity android:name=".activity.RecyclerActivity2" />
         <activity android:name=".arcgis.ArcgisActivityCom" />
         <activity android:name=".arcgis.ArcgisListActivityCom" />
 
