--- a/app_skill/src/main/AndroidManifest.xml
+++ b/app_skill/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name=".activity.StickyActivity" />
         <activity android:name=".activity.SmartRefreshActivity" />
         <activity android:name=".activity.RecyclerActivity" />
-        <activity android:name=".activity.RecyclerActivity2" />
+        <activity android:name=".activity.PhotoActivity" />
         <activity android:name=".arcgis.ArcgisActivity" />
         <activity android:name=".arcgis.ArcgisListActivity" />
 
