--- a/app_skill/build.gradle
+++ b/app_skill/build.gradle
@@ -10,10 +10,6 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        manifestPlaceholders = [
-                //  替换成你的qq_id
-                qq_id: "305502158"
-        ]
     }
     buildTypes {
         release {
@@ -21,17 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    //arcgis配置
     packagingOptions {
         exclude 'META-INF/LGPL2.1'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/androidx.legacy_legacy-support-core-utils.version'
+        exclude 'META-INF/androidx.loader_loader.version'
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'me.shaohui.shareutil:shareutil:1.3.8'
     implementation project(path: ':lib_common')
+//    implementation ('com.yanzhenjie.recyclerview:support:1.3.2') {
+//        exclude group: 'com.android.support'
+//    }
+    implementation 'com.yanzhenjie.recyclerview:support:1.3.2'
 }
