--- a/app_skill/src/main/AndroidManifest.xml
+++ b/app_skill/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -34,13 +35,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ThirdLoginActivity" />
         <activity android:name=".activity.StickyActivity" />
         <activity android:name=".activity.SmartRefreshActivity" />
         <activity android:name=".activity.RecyclerActivity" />
         <activity android:name=".activity.PhotoActivity" />
-        <activity android:name=".arcgis.ArcgisActivity" />
-        <activity android:name=".arcgis.ArcgisListActivity" />
+        <activity android:name=".activity.SkillActivity" />
 
 
     </application>
